--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@ Aproveite a Garantia de 30 Dias!">
 <link rel="canonical" href="https://ozenvitta-original.pages.dev/">
 
     <!-- ARQUIVOS CSSs -->
-    <link rel="stylesheet" type="text/css" href="blob/main/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/pricing.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="pricing.css">
     
-    <!-- Preload para recursos críticos -->
-    <link rel="preload" href="assets/images/ozenvitta-oficial.webp" as="image" type="image/webp">
-    <link rel="preload" href="blob/main/bootstrap.min.css" as="style">
+<link rel="preload" href="ozenvitta-oficial.webp" as="image" type="image/webp">
+<link rel="preload" href="bootstrap.min.css" as="style">
 
 </head>  <!-- ← FECHAMENTO DO HEAD -->  
 
@@ -533,4 +532,5 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
