Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <title>OzenVitta Site Oficial – Emagrecedor Natural e Suplemento Alimentar</title>
 <meta name="description" content="Transforme seu corpo com OzenVitta. Fórmula 100% natural com Laranja Moro e Chia para um emagrecimento saudável. 
 Aproveite a Garantia de 30 Dias!">
-<link rel="canonical" href="https://ozenvitta-original.pages.dev/">
+<link rel="canonical"https://caiojhonson.github.io/ozenvitta-oficial/">
 
     <!-- ARQUIVOS CSSs -->
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
@@ -532,5 +532,6 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
