--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     "@context": "https://schema.org",
     "@type": "Product",
     "name": "OzenVitta",
-    "image": "https://ozenvitta-original.pages.dev/assets/images/ozenvitta-oficial.webp", 
+    "image": "https://ozenvitta-original.pages.dev/ozenvitta-oficial.webp", 
     "description": "Emagrecedor Natural com Laranja Moro e Chia. Fórmula 100% natural para um emagrecimento saudável.",
     "brand": {
         "@type": "Brand",
@@ -532,6 +532,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
