Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Aproveite a Garantia de 30 Dias!">
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="pricing.css">
     
-<link rel="preload" href="ozenvitta-oficial.webp" as="image" type="image/webp">
+<link rel="preload" href="/ozenvitta-oficial.webp" as="image" type="image/webp">
 <link rel="preload" href="bootstrap.min.css" as="style">
 
 </head>  <!-- ← FECHAMENTO DO HEAD -->  
@@ -125,7 +125,7 @@ Ganhe também um
 <div class="cta-wrapper"> <a href="#valor" class="btn-cta"> QUERO EMAGRECER DE FORMA NATURAL </a>
 </div>
 </div> 
-<div class="hero-image"> <img src="assets/images/ozenvitta-oficial.webp" alt="OzenVitta Suplemento">
+<div class="hero-image"> <img src="ozenvitta-oficial.webp" alt="OzenVitta Suplemento">
 </div>
 </div>
 </section>
@@ -532,6 +532,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
