Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Ganhe também um
 <div class="cta-wrapper"> <a href="#valor" class="btn-cta"> QUERO EMAGRECER DE FORMA NATURAL </a>
 </div>
 </div> 
-<div class="hero-image"> <img src="ozenvitta-oficial.webp" alt="OzenVitta Suplemento">
+<div class="hero-image"> <img src="/ozenvitta-oficial.webp" alt="OzenVitta Suplemento">
 </div>
 </div>
 </section>
@@ -532,6 +532,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
