--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ mesmo enquanto está em repouso</p>
                     
                 </div>
                 <div class="comparison-container">
-                    <img src="/depoimento-real.webp" alt="Resultado Antes e Depois">
+                    <img src="/ozenvitta-oficial/depoimento-real.webp" alt="Resultado Antes e Depois">
                     <div class="labels">
                         <span class="label-before">ANTES</span>
                         <span class="label-after">DEPOIS</span>
@@ -532,6 +532,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
