Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -169,20 +169,13 @@ Ganhe também um
 
         <div class="benefit-item">
             <div class="benefit-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 21" fill="none" 
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M16.3546 15.238V3.14265C16.3546 2.15643 15.5551 1.35693 14.5689 1.35693H3.03962C2.05339 1.35693 1.25391 2.15643 1.25391 
-                    3.14265V14.9741C1.25391 15.9603 2.05339 16.7598 3.03962 16.7598H4.44518"></path>
-                    <path d="M23.7458 9.80811H16.3574"></path>
-                    <path d="M20.7814 16.7596H21.9991C22.9903 16.7596 23.7919 15.9523 23.7846 14.9609L23.7434 9.2818L21.2568 4.191C20.9573 3.57784 
-                    20.3346 3.18896 19.6523 3.18896H16.3311"></path>
-                    <circle cx="7" cy="16.8" r="2.5"></circle>
-                    <circle cx="18.3" cy="16.8" r="2.5"></circle>
-                </svg>
-            </div>
-            <div class="benefit-text">
-                <h3>FRETE GRÁTIS</h3>
-                <p>Para todo Brasil</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 21" fill="none" stroke="currentColor" stroke-width="2" 
+                    stroke-linecap="round" stroke-linejoin="round"><path d="M16.3546 15.238V3.14265C16.3546 2.15643 15.5551 1.35693 14.5689 
+                    1.35693H3.03962C2.05339 1.35693 1.25391 2.15643 1.25391 3.14265V14.9741C1.25391 15.9603 2.05339 16.7598 3.03962 16.7598H4.44518">
+                    </path><path d="M23.7458 9.80811H16.3574"></path><path d="M20.7814 16.7596H21.9991C22.9903 16.7596 23.7919 15.9523 23.7846 
+                    14.9609L23.7434 9.2818L21.2568 4.191C20.9573 3.57784 20.3346 3.18896 19.6523 3.18896H16.3311"></path> <circle cx="7" cy="16.8" r="2.5"></circle>
+                    <circle cx="18.3" cy="16.8" r="2.5"></circle> </svg> </div> <div class="benefit-text">
+                <h3>FRETE GRÁTIS</h3> <p>Para todo Brasil</p>
             </div>
         </div>
     </div>
@@ -204,7 +197,7 @@ mesmo enquanto está em repouso</p>
 
 </div> </div> <div class="benefit-card"> <div class="card-image"> <img src="/ozenvitta-oficial/combate-inchaco.webp" alt="Combate inchaço"> 
 </div> <div class="card-content"> <h3>Combate o inchaço e retenção de líquidos:</h3> <p>Ingredientes como Quitosana e Inulina regulam a digestão.</p> 
-</div> </div> <div class="benefit-card"> <div class="card-image"> <img src="/ozenvitta-oficial/ozenvitta-oficial/aumenta-energia.webp" alt="Aumento de energia">
+</div> </div> <div class="benefit-card"> <div class="card-image"> <img src="/ozenvitta-oficial/aumenta-energia.webp" alt="Aumento de energia">
 </div> <div class="card-content"> <h3>Auxilia no aumento da energia:</h3> <p>Componentes que irão dar mais vitalidade no dia a dia.</p>
 </div> </div> </div> <div class="cta-container"> <a href="#valor" class="btn-primary-pulse">
                 
@@ -459,11 +452,11 @@ mesmo enquanto está em repouso</p>
         </div>
 
         <div class="depoimentos-grid">
-            <div class="testimonial-card"><img src="assets/images/design-sem-nome.webp" alt="Depoimento"></div>
-            <div class="testimonial-card"><img src="assets/images/image-36.webp" alt="Depoimento"></div>
-            <div class="testimonial-card"><img src="assets/images/image-38.webp" alt="Depoimento"></div>
-            <div class="testimonial-card"><img src="assets/images/image-36.webp" alt="Depoimento"></div>
-            <div class="testimonial-card"><img src="assets/images/design-sem-nome.webp" alt="Depoimento"></div>
+            <div class="testimonial-card"><img src="/ozenvitta-oficial/design-sem-nome.webp" alt="Depoimento"></div>
+            <div class="testimonial-card"><img src="/ozenvitta-oficial/image-36.webp" alt="Depoimento"></div>
+            <div class="testimonial-card"><img src="/ozenvitta-oficial/image-38.webp" alt="Depoimento"></div>
+            <div class="testimonial-card"><img src="/ozenvitta-oficial/image-36.webp" alt="Depoimento"></div>
+            <div class="testimonial-card"><img src="/ozenvitta-oficial/design-sem-nome.webp" alt="Depoimento"></div>
         </div>
     </div>
 </section>
@@ -532,6 +525,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
