Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">  <!-- ADICIONADO: lang attribute -->
 <head>
 <meta name="google-site-verification" content="DtQwjZawAwxXCWRNs8-g7xW9rOFCGyeqnvXltOAQOJ4"/> 
+<meta name="msvalidate.01" content="ACDBFB032CB0AB27920B9FE396AEEF18"/>  
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -525,6 +526,7 @@ mesmo enquanto está em repouso</p>
 </body>  <!-- ← FECHAMENTO DO BODY (ADICIONADO) -->
 
 </html>  <!-- ← FECHAMENTO DO HTML (ADICIONADO) -->
+
 
 
 
